# shardflow-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  manifest-format.md  release.md  reproducibility.md  roadmap.md  validation.md
examples/data/: shard-000.jsonl  shard-001.jsonl
src/shardflow/: __init__.py  checkpoint.py  cli.py  doctor.py  index.py  manifest.py  models.py  planner.py  reports.py
tests/: test_shardflow.py
